<resources>
    <string name="app_name">READo!</string>
    <string name="get_words">Get Words</string>
    <string name="run_quiz">Fun Quiz</string>
    <string name="powered_by">Powered By</string>
    <string name="choose_level">Choose Level!</string>
    <string name="choose_word">Choose Word!</string>
    <string name="back_to_home">Back To Home</string>
    <string name="_continue">Continue</string>
    <string name="choose_stage">Choose Stage</string>
    <string name="no_text">No Text Detected</string>
    <string name="alphabet">Alphabet</string>
    <string name="video_play">Let\'s Learn Things!</string>
    <string name="supported_by">Supported By</string>
    <string name="about_us">About us</string>
    <string name="about_this_app">About this App</string>
    <string name="developed_by">Developed by</string>
    <string name="special_credits">Special Credits</string>

    <!--Quiz-->
    <string name="wrong">Whops, wrong!</string>
    <string name="reset">Reset</string>
    <string name="retry">Retry</string>
    <string name="correct">Correct!</string>
    <string name="next">Next</string>
    <string name="listen">Listen!</string>
    <string name="watch">Watch this video!</string>
    <string name="play">Play</string>
    <string name="training">Training</string>
    <string name="good_job">Good Job!</string>
    <string name="finish_all">You have completed all quizzes</string>
    <string name="finish_exercise">You have answered all questions</string>
    <string name="stage_0_desc">Guess word</string>
    <string name="stage_1_desc">Guess Things in English Language!</string>
    <string name="stage_2_desc">Guess Animal in English Language!</string>
    <string name="stage_3_desc">Guess Vegetable in English Language!</string>

    <string name="app_desc">
            READo! is an application that able to detect alphabet and words in order to help kids to read and learn the alphabetical word that exists around them, available in English and Indonesia.
    </string>

    <!--Content Description-->
    <string name="image_description">some image</string>
    <string name="some_text">some text</string>

    <!--Alphabet Pronounciation-->
    <string-array name="alphabets">
        <item>ei</item>
        <item>bi:</item>
        <item>si:</item>
        <item>di:</item>
        <item>i:</item>
        <item>ef:</item>
        <item>dʒi:</item>
        <item>eitʃ</item>
        <item>ai</item>
        <item>dʒei</item>
        <item>kei</item>
        <item>el</item>
        <item>em</item>
        <item>en</item>
        <item>o</item>
        <item>pi:</item>
        <item>kju:</item>
        <item>ar</item>
        <item>es</item>
        <item>ti:</item>
        <item>ju:</item>
        <item>vi:</item>
        <item>‘dʌəlju:</item>
        <item>eks</item>
        <item>wai</item>
        <item>zi</item>
    </string-array>

    <!--numeric pronounciation-->
    <string-array name="numerics">
        <item>zero</item>
        <item>one</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>
        <item>five</item>
        <item>six</item>
        <item>seven</item>
        <item>eight</item>
        <item>nine</item>
        <item>ten</item>
    </string-array>

</resources>

