<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_app"
    tools:context=".QuizStageOneActivity">

    <TextView
        android:id="@+id/textScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:text="@string/some_text"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_rounded_corner1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/textQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:lineSpacingExtra="6dp"
            android:text="@string/stage_2_desc"
            android:textAlignment="center"
            android:textColor="#332FA2"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgGuess"
        android:layout_width="296dp"
        android:layout_height="168dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/level_1_0" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_rounded_corner1"
        android:clickable="false"
        android:focusable="false"
        android:gravity="center"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#332FA2"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="16dp"
        android:textColor="#fff"
        android:background="@drawable/bg_rounded_corner3"
        android:textSize="12sp"
        android:text="@string/reset" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="10dp"
        android:text="@string/alphabet"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/layoutParent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>