<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_app"
    tools:context=".QuizStageTwoActivity">

    <TextView
        android:id="@+id/textScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:text="@string/some_text"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_rounded_corner1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="240dp"
        android:layout_height="80dp">

        <TextView
            android:id="@+id/textQuestion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:lineSpacingExtra="6dp"
            android:text="@string/stage_2_desc"
            android:textAlignment="center"
            android:textColor="#332FA2"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/listen"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSound"
        android:layout_gravity="center"
        android:background="@drawable/btn_sound_orange"
        android:layout_marginTop="10dp"
        android:layout_width="100dp"
        android:layout_height="105dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_rounded_corner1"
        android:clickable="false"
        android:focusable="false"
        android:gravity="center"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#332FA2"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="10dp"
        android:text="@string/alphabet"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layoutParent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </LinearLayout>

</LinearLayout>