<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnGetWords"
        android:layout_width="184dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_photo"
        android:text="@string/get_words"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <Button
        android:id="@+id/btnRunQuiz"
        android:layout_width="184dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_start"
        android:text="@string/run_quiz"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGetWords" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:srcCompat="@drawable/img_logo" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintStart_toEndOf="@+id/btnRunQuiz"
        app:layout_constraintTop_toBottomOf="@+id/btnRunQuiz"
        app:srcCompat="@drawable/img_balloon" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img_ferris_wheel" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:srcCompat="@drawable/img_neptune" />


    <android.support.constraint.Group
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="guideline6,guideline7" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/txtSupported"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/supported_by"
            android:textColor="#fff"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:alpha="0.6"
            android:background="@drawable/bg_rounded1"
            app:layout_constraintEnd_toStartOf="@+id/imageView12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSupported"
            app:srcCompat="@drawable/waskita" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:alpha="0.6"
            android:background="@drawable/bg_rounded1"
            android:padding="8dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView13"
            app:layout_constraintTop_toBottomOf="@+id/txtSupported"
            app:srcCompat="@drawable/waskita_realty" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:alpha="0.6"
            android:background="@drawable/bg_rounded1"
            android:padding="5dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView14"
            app:layout_constraintTop_toBottomOf="@+id/txtSupported"
            app:srcCompat="@drawable/asdp" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:alpha="0.6"
            android:background="@drawable/bg_rounded1"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSupported"
            app:srcCompat="@drawable/pindad" />
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="18dp"
        android:alpha="0.7"
        android:background="@android:drawable/ic_dialog_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>